# RISCV-Simulation

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  riscv-simulator.flatpak
.github/: build.yml
.github/workflows/: build.yml
emulator/: CMakeLists.txt  CPU.cpp  CPU.h  Emulator.cpp  Emulator.h  Memory.cpp  Memory.h  Opcodes.h  Registers.cpp  Registers.h
flatpak/: com.github.draqzziq.riscvsimulator.yaml
parser/: CMakeLists.txt  OpCodes.cpp  OpCodes.h  Parser.cpp  Parser.h  ParserCLI.cpp  ParsingResult.h
simulator/: CMakeLists.txt  CPU.cpp  CPU.h  CPUUtil.cpp  CPUUtil.h  Memory.cpp  Memory.h  Opcodes.h  Registers.cpp  Registers.h  Simulator.cpp  Simulator.h
tests/: CMakeLists.txt  CPUTest.cpp  MemoryTest.cpp  ParserTest.cpp
ui/: CMakeLists.txt  Config.cpp  Config.h  ErrorParser.cpp  ErrorParser.h  HelpWindow.cpp  HelpWindow.h  MainWindow.cpp  MainWindow.h  SimulationThread.cpp  SimulationThread.h  main.cpp
ui/completers/: QRiscvAsmCompleter.cpp  QRiscvAsmCompleter.h
ui/highlighters/: QRiscvAsmHighlighter.cpp  QRiscvAsmHighlighter.h
ui/resources/: com.github.draqzziq.riscvsimulator.desktop  resources.qrc
ui/resources/languages/: riscv-asm.xml
ui/resources/styles/: drakula.xml  light.xml
ui/resources/themes/: dark.qss  light.qss
